[gd_scene load_steps=24 format=3 uid="uid://dsilf3lddrpd1"]

[ext_resource type="Script" path="res://scripts/map.gd" id="1_wcktq"]
[ext_resource type="Script" path="res://scripts/map_controls/camera_controller.gd" id="2_ndhmv"]
[ext_resource type="Script" path="res://scripts/map_controls/3d_cam.gd" id="2_qgfvi"]
[ext_resource type="Script" path="res://scripts/map_controls/top_down_cam.gd" id="3_8ltgi"]
[ext_resource type="Script" path="res://scripts/map_features/line_controller.gd" id="4_oofmq"]
[ext_resource type="Script" path="res://scripts/map_controls/orbit_cam.gd" id="5_83l6a"]
[ext_resource type="Script" path="res://scripts/interface/file_manager.gd" id="6_450h0"]
[ext_resource type="Script" path="res://scripts/interface/data_manager.gd" id="6_omv4d"]
[ext_resource type="Material" uid="uid://bt5wm378x7g3t" path="res://shaders/grid.tres" id="6_ynp7h"]
[ext_resource type="Script" path="res://scripts/xml_parser.gd" id="7_6r7y6"]
[ext_resource type="Script" path="res://scripts/interface/map_menus.gd" id="7_hwjwt"]
[ext_resource type="Script" path="res://scripts/interface/object_editor.gd" id="7_v0kxw"]
[ext_resource type="Theme" uid="uid://7palklbdggyp" path="res://ui_theme.tres" id="8_06c3m"]
[ext_resource type="Script" path="res://scripts/interface/add_gps_menu.gd" id="9_0avfx"]
[ext_resource type="Texture2D" uid="uid://xu76gafqrbn5" path="res://icons/sphere.svg" id="10_bxjq5"]
[ext_resource type="Texture2D" uid="uid://d2jmcyb3k4tm0" path="res://icons/cube.svg" id="11_hqek8"]
[ext_resource type="Texture2D" uid="uid://b3xjlq0hhbsen" path="res://icons/hexagon.svg" id="12_b3pek"]
[ext_resource type="Texture2D" uid="uid://d2v00lfpf44im" path="res://bg_image.png" id="17_ucipo"]

[sub_resource type="SphereMesh" id="SphereMesh_sv1im"]
radius = 2500.0
height = 5000.0

[sub_resource type="PlaneMesh" id="PlaneMesh_ucg4f"]

[sub_resource type="PlaneMesh" id="PlaneMesh_qiol2"]
size = Vector2(2400, 2400)

[sub_resource type="Environment" id="Environment_w5re7"]
background_mode = 1
background_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
ambient_light_source = 2
ambient_light_color = Color(0.572549, 0.572549, 0.572549, 1)
reflected_light_source = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1fhk2"]
bg_color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="map" type="Node3D"]
script = ExtResource("1_wcktq")

[node name="camera_controller" type="Node3D" parent="."]
script = ExtResource("2_ndhmv")

[node name="top_down_cam" type="Camera3D" parent="camera_controller"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4529.81, 0)
projection = 1
current = true
size = 7500.0
far = 100000.0
script = ExtResource("3_8ltgi")

[node name="freecam" type="Camera3D" parent="camera_controller"]
transform = Transform3D(1, 0, 0, 0, 0.970046, 0.242921, 0, -0.242921, 0.970046, 0, 247.751, 999.781)
far = 7500.0
script = ExtResource("2_qgfvi")

[node name="mask" type="MeshInstance3D" parent="camera_controller/freecam"]
visible = false
mesh = SubResource("SphereMesh_sv1im")

[node name="orbit_cam" type="Node3D" parent="camera_controller"]
script = ExtResource("5_83l6a")

[node name="cam_yaw" type="Node3D" parent="camera_controller/orbit_cam"]

[node name="cam_pitch" type="Node3D" parent="camera_controller/orbit_cam/cam_yaw"]

[node name="cam" type="Camera3D" parent="camera_controller/orbit_cam/cam_yaw/cam_pitch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 247.751, 999.781)
far = 7500.0

[node name="lines" type="Node3D" parent="camera_controller"]
script = ExtResource("4_oofmq")

[node name="trade" type="Node3D" parent="camera_controller/lines"]

[node name="h_planets" type="Node3D" parent="."]

[node name="h_stations" type="Node3D" parent="."]

[node name="h_asteroids" type="Node3D" parent="."]
visible = false

[node name="bg" type="MeshInstance3D" parent="."]
transform = Transform3D(1750, 0, 0, 0, 1750, 0, 0, 0, 1750, 0, -65.5159, 0)
visible = false
mesh = SubResource("PlaneMesh_ucg4f")

[node name="grid" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 1.49012e-08, 0, 1, 3.8147e-06, -7.62939e-06, 0)
visible = false
mesh = SubResource("PlaneMesh_qiol2")
surface_material_override/0 = ExtResource("6_ynp7h")

[node name="grid3" type="MeshInstance3D" parent="grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.8147e-06, 7.62939e-06, -2400)
mesh = SubResource("PlaneMesh_qiol2")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("6_ynp7h")

[node name="grid2" type="MeshInstance3D" parent="grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.8147e-06, 7.62939e-06, 2400)
mesh = SubResource("PlaneMesh_qiol2")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("6_ynp7h")

[node name="grid4" type="MeshInstance3D" parent="grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2400, 0, 3.57629e-05)
mesh = SubResource("PlaneMesh_qiol2")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("6_ynp7h")

[node name="grid5" type="MeshInstance3D" parent="grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2400, 7.62939e-06, -2400)
mesh = SubResource("PlaneMesh_qiol2")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("6_ynp7h")

[node name="grid6" type="MeshInstance3D" parent="grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2400, 7.62939e-06, 2400)
mesh = SubResource("PlaneMesh_qiol2")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("6_ynp7h")

[node name="grid7" type="MeshInstance3D" parent="grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2400, 0, -3.57629e-05)
mesh = SubResource("PlaneMesh_qiol2")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("6_ynp7h")

[node name="grid8" type="MeshInstance3D" parent="grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2400, 7.62939e-06, -2400)
mesh = SubResource("PlaneMesh_qiol2")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("6_ynp7h")

[node name="grid9" type="MeshInstance3D" parent="grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2400, 7.62939e-06, 2400)
mesh = SubResource("PlaneMesh_qiol2")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("6_ynp7h")

[node name="sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.683298, 0.0786125, 0.725895, -0.724742, 0.193685, 0.661237, -0.0886138, -0.977909, 0.189319, 0, 106.412, 0)
sky_mode = 1

[node name="env" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_w5re7")

[node name="canvas_layer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="console" type="Label" parent="canvas_layer"]
offset_left = 14.0
offset_top = 684.0
offset_right = 1096.0
offset_bottom = 710.0
scale = Vector2(0.75, 0.75)
theme = ExtResource("8_06c3m")
text = "from:"
vertical_alignment = 2

[node name="msg" type="Label" parent="canvas_layer"]
offset_left = 866.0
offset_top = 696.0
offset_right = 1449.0
offset_bottom = 722.0
scale = Vector2(0.7, 0.7)
theme = ExtResource("8_06c3m")
text = "Elecarno's SE Mapper v1.0, Press L for keybinds"
horizontal_alignment = 2
vertical_alignment = 2

[node name="keybinds" type="Panel" parent="canvas_layer"]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -123.0
offset_right = 343.0
offset_bottom = 103.0
grow_vertical = 2
theme = ExtResource("8_06c3m")

[node name="keybinds_label" type="Label" parent="canvas_layer/keybinds"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 11.0
offset_right = -11.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_06c3m")
text = "F - Switch Camera View
H - Toggle All Labels

E - Draw Routes
ESC - Clear All Routes

WASD & Space & C - Freecam Controls
Shift [Hold] - Camera \"Sprint\"
Z [Hold] - Freecam Zoom"

[node name="map_menus" type="Control" parent="canvas_layer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_06c3m")
script = ExtResource("7_hwjwt")

[node name="objects_menu_open" type="Button" parent="canvas_layer/map_menus"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -89.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 36.0
grow_horizontal = 0
theme = ExtResource("8_06c3m")
text = "Edit Objects"

[node name="add_gps_menu_open" type="Button" parent="canvas_layer/map_menus"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -248.0
offset_top = 10.0
offset_right = -96.0
offset_bottom = 36.0
grow_horizontal = 0
theme = ExtResource("8_06c3m")
text = "Add Object From GPS"

[node name="objects_menu" type="Control" parent="canvas_layer/map_menus"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -298.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 644.0
grow_horizontal = 0

[node name="panel" type="PanelContainer" parent="canvas_layer/map_menus/objects_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_06c3m")

[node name="scroll" type="ScrollContainer" parent="canvas_layer/map_menus/objects_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 13.0
offset_right = -12.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_06c3m")
horizontal_scroll_mode = 0

[node name="vbox" type="VBoxContainer" parent="canvas_layer/map_menus/objects_menu/scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("8_06c3m")

[node name="close_button" type="Button" parent="canvas_layer/map_menus/objects_menu"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -34.0
offset_right = -7.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("8_06c3m")
text = "^"

[node name="object_editor" type="Control" parent="canvas_layer/map_menus"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -650.0
offset_top = 18.0
offset_right = -306.0
offset_bottom = 215.0
grow_horizontal = 0
theme = ExtResource("8_06c3m")
script = ExtResource("7_v0kxw")

[node name="panel" type="PanelContainer" parent="canvas_layer/map_menus/object_editor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="name_edit" type="LineEdit" parent="canvas_layer/map_menus/object_editor"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -339.0
offset_top = 11.0
offset_right = -5.0
offset_bottom = 40.0
grow_horizontal = 0
theme = ExtResource("8_06c3m")
placeholder_text = "Display Name"

[node name="type_edit" type="LineEdit" parent="canvas_layer/map_menus/object_editor"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -338.0
offset_top = 157.0
offset_right = -8.0
offset_bottom = 189.0
grow_horizontal = 0
theme = ExtResource("8_06c3m")
placeholder_text = "Type"

[node name="faction_edit" type="LineEdit" parent="canvas_layer/map_menus/object_editor"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -338.0
offset_top = 119.0
offset_right = -6.0
offset_bottom = 150.0
grow_horizontal = 0
theme = ExtResource("8_06c3m")
placeholder_text = "Faction"

[node name="colour_picker_button" type="ColorPickerButton" parent="canvas_layer/map_menus/object_editor"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -47.0
offset_right = -6.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("8_06c3m")

[node name="colour_labels" type="Label" parent="canvas_layer/map_menus/object_editor"]
modulate = Color(0.694118, 0.694118, 0.694118, 1)
layout_mode = 0
offset_left = 13.0
offset_top = 59.0
offset_right = 209.0
offset_bottom = 84.0
theme = ExtResource("8_06c3m")
text = "Display Colour
"

[node name="prop_names" type="Label" parent="canvas_layer/map_menus/object_editor"]
modulate = Color(0.694118, 0.694118, 0.694118, 1)
layout_mode = 0
offset_left = 13.0
offset_top = 95.0
offset_right = 209.0
offset_bottom = 203.0
theme = ExtResource("8_06c3m")
text = "Position
Radius
Atm. Radius
Gravity
"

[node name="prop_label" type="Label" parent="canvas_layer/map_menus/object_editor"]
layout_mode = 0
offset_left = 88.0
offset_top = 95.0
offset_right = 338.0
offset_bottom = 194.0
theme = ExtResource("8_06c3m")
text = "12345678, 12345678, 12345678
70km
90km
1.0g"
horizontal_alignment = 2

[node name="close_button" type="Button" parent="canvas_layer/map_menus/object_editor"]
layout_mode = 1
offset_left = -32.0
offset_right = -2.0
offset_bottom = 31.0
theme = ExtResource("8_06c3m")
text = ">"

[node name="add_gps_menu" type="Control" parent="canvas_layer/map_menus"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -323.0
offset_top = 10.0
offset_right = -11.0
offset_bottom = 214.0
grow_horizontal = 0
theme = ExtResource("8_06c3m")
script = ExtResource("9_0avfx")

[node name="panel" type="PanelContainer" parent="canvas_layer/map_menus/add_gps_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_06c3m")

[node name="gps_insert" type="LineEdit" parent="canvas_layer/map_menus/add_gps_menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -305.0
offset_top = 11.0
offset_right = -10.0
offset_bottom = 41.0
grow_horizontal = 0
theme = ExtResource("8_06c3m")
placeholder_text = "Insert GPS"

[node name="para_1" type="LineEdit" parent="canvas_layer/map_menus/add_gps_menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -194.0
offset_top = 90.0
offset_right = -9.0
offset_bottom = 119.0
grow_horizontal = 0
theme = ExtResource("8_06c3m")
placeholder_text = "Insert Faction"

[node name="para_2" type="LineEdit" parent="canvas_layer/map_menus/add_gps_menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -194.0
offset_top = 123.0
offset_right = -9.0
offset_bottom = 151.0
grow_horizontal = 0
theme = ExtResource("8_06c3m")
placeholder_text = "Insert Type"

[node name="type_label" type="Label" parent="canvas_layer/map_menus/add_gps_menu"]
modulate = Color(0.694118, 0.694118, 0.694118, 1)
layout_mode = 0
offset_left = 13.0
offset_top = 54.0
offset_right = 209.0
offset_bottom = 79.0
theme = ExtResource("8_06c3m")
text = "Select Type"

[node name="para_label" type="Label" parent="canvas_layer/map_menus/add_gps_menu"]
modulate = Color(0.694118, 0.694118, 0.694118, 1)
layout_mode = 0
offset_left = 13.0
offset_top = 95.0
offset_right = 307.0
offset_bottom = 145.0
theme = ExtResource("8_06c3m")
text = "Faction
Type"

[node name="confirm_label" type="Label" parent="canvas_layer/map_menus/add_gps_menu"]
modulate = Color(0.694118, 0.694118, 0.694118, 1)
layout_mode = 0
offset_left = 5.0
offset_top = 211.0
offset_right = 307.0
offset_bottom = 313.0
theme = ExtResource("8_06c3m")
text = "Added: "

[node name="close_button" type="Button" parent="canvas_layer/map_menus/add_gps_menu"]
layout_mode = 1
offset_left = -32.0
offset_right = -2.0
offset_bottom = 31.0
theme = ExtResource("8_06c3m")
text = ">"

[node name="submit_button" type="Button" parent="canvas_layer/map_menus/add_gps_menu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -33.0
offset_right = 70.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("8_06c3m")
disabled = true
text = "Select type to add GPS"

[node name="type_select" type="OptionButton" parent="canvas_layer/map_menus/add_gps_menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -191.0
offset_top = 50.0
offset_right = -13.0
offset_bottom = 82.0
grow_horizontal = 0
theme = ExtResource("8_06c3m")
item_count = 3
popup/item_0/text = "Planet"
popup/item_0/icon = ExtResource("10_bxjq5")
popup/item_0/id = 0
popup/item_1/text = "Grid"
popup/item_1/icon = ExtResource("11_hqek8")
popup/item_1/id = 1
popup/item_2/text = "Asteroid (WIP)"
popup/item_2/icon = ExtResource("12_b3pek")
popup/item_2/id = 2
popup/item_2/disabled = true

[node name="data_manager" type="Control" parent="canvas_layer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("8_06c3m")
script = ExtResource("6_omv4d")

[node name="xml_parser" type="Control" parent="canvas_layer/data_manager"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("8_06c3m")
script = ExtResource("7_6r7y6")

[node name="save_mapdata" type="Button" parent="canvas_layer/data_manager"]
layout_mode = 0
offset_left = 8.0
offset_top = 9.0
offset_right = 82.0
offset_bottom = 34.0
theme = ExtResource("8_06c3m")
text = "Save Map"

[node name="bg" type="Panel" parent="canvas_layer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1fhk2")

[node name="img" type="TextureRect" parent="canvas_layer/bg"]
modulate = Color(0.427451, 0.427451, 0.427451, 1)
offset_left = -591.0
offset_top = -219.0
offset_right = 1889.0
offset_bottom = 3289.0
rotation = 1.57079
scale = Vector2(0.534025, -0.534025)
texture = ExtResource("17_ucipo")

[node name="file_manager" type="Control" parent="canvas_layer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_06c3m")
script = ExtResource("6_450h0")

[node name="title_1" type="RichTextLabel" parent="canvas_layer/file_manager"]
layout_mode = 0
offset_left = 457.0
offset_top = 260.0
offset_right = 1003.0
offset_bottom = 356.0
scale = Vector2(0.446508, 0.446508)
theme = ExtResource("8_06c3m")
theme_override_font_sizes/normal_font_size = 72
text = "Space Engineers"

[node name="title_2" type="RichTextLabel" parent="canvas_layer/file_manager"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -72.0
offset_right = 1113.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.534491, 0.534491)
theme = ExtResource("8_06c3m")
theme_override_font_sizes/normal_font_size = 128
bbcode_enabled = true
text = "[center]3D Mapping[center]"

[node name="title_3" type="RichTextLabel" parent="canvas_layer/file_manager"]
layout_mode = 0
offset_left = 719.0
offset_top = 370.0
offset_right = 1088.0
offset_bottom = 466.0
scale = Vector2(0.273678, 0.273678)
theme = ExtResource("8_06c3m")
theme_override_font_sizes/normal_font_size = 72
text = "Application"

[node name="author" type="RichTextLabel" parent="canvas_layer/file_manager"]
modulate = Color(0.698039, 0.698039, 0.698039, 1)
layout_mode = 0
offset_left = 582.0
offset_top = 686.0
offset_right = 1280.0
offset_bottom = 782.0
scale = Vector2(0.170139, 0.170139)
theme = ExtResource("8_06c3m")
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true
text = "[center]github.com/elecarno[center]"

[node name="open_gamesave" type="Button" parent="canvas_layer/file_manager"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = 99.0
offset_right = 54.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_06c3m")
text = "Open Game Save"

[node name="open_mapdata" type="Button" parent="canvas_layer/file_manager"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = 71.0
offset_right = 54.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_06c3m")
text = "Open Map"

[node name="error" type="Label" parent="canvas_layer/file_manager"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -222.0
offset_top = -126.0
offset_right = 218.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("8_06c3m")
text = "error msg"
horizontal_alignment = 1
vertical_alignment = 1

[node name="file_dialog" type="FileDialog" parent="canvas_layer"]
title = "Open a File"
position = Vector2i(345, 90)
size = Vector2i(647, 559)
ok_button_text = "Open"
file_mode = 0
access = 2
show_hidden_files = true

[connection signal="pressed" from="canvas_layer/map_menus/objects_menu_open" to="canvas_layer/map_menus" method="_on_objects_menu_open_pressed"]
[connection signal="pressed" from="canvas_layer/map_menus/add_gps_menu_open" to="canvas_layer/map_menus" method="_on_add_gps_menu_open_pressed"]
[connection signal="pressed" from="canvas_layer/map_menus/objects_menu/close_button" to="canvas_layer/map_menus" method="_on_close_button_pressed"]
[connection signal="text_submitted" from="canvas_layer/map_menus/object_editor/name_edit" to="canvas_layer/map_menus/object_editor" method="_on_name_edit_text_submitted"]
[connection signal="text_submitted" from="canvas_layer/map_menus/object_editor/type_edit" to="canvas_layer/map_menus/object_editor" method="_on_type_edit_text_submitted"]
[connection signal="text_submitted" from="canvas_layer/map_menus/object_editor/faction_edit" to="canvas_layer/map_menus/object_editor" method="_on_faction_edit_text_submitted"]
[connection signal="color_changed" from="canvas_layer/map_menus/object_editor/colour_picker_button" to="canvas_layer/map_menus/object_editor" method="_on_colour_picker_button_color_changed"]
[connection signal="pressed" from="canvas_layer/map_menus/object_editor/close_button" to="canvas_layer/map_menus/object_editor" method="_on_close_button_pressed"]
[connection signal="pressed" from="canvas_layer/map_menus/add_gps_menu/close_button" to="canvas_layer/map_menus" method="_on_close_button_pressed"]
[connection signal="pressed" from="canvas_layer/map_menus/add_gps_menu/submit_button" to="canvas_layer/map_menus/add_gps_menu" method="_on_submit_button_pressed"]
[connection signal="item_selected" from="canvas_layer/map_menus/add_gps_menu/type_select" to="canvas_layer/map_menus/add_gps_menu" method="_on_type_select_item_selected"]
[connection signal="pressed" from="canvas_layer/data_manager/save_mapdata" to="canvas_layer/file_manager" method="_on_save_mapdata_pressed"]
[connection signal="pressed" from="canvas_layer/file_manager/open_gamesave" to="canvas_layer/file_manager" method="_on_open_gamesave_pressed"]
[connection signal="pressed" from="canvas_layer/file_manager/open_mapdata" to="canvas_layer/file_manager" method="_on_open_mapdata_pressed"]
[connection signal="dir_selected" from="canvas_layer/file_dialog" to="canvas_layer/file_manager" method="_on_file_dialog_dir_selected"]
[connection signal="file_selected" from="canvas_layer/file_dialog" to="canvas_layer/file_manager" method="_on_file_dialog_file_selected"]
